kustomize/base/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dodle-mongodb
spec:
  revisionHistoryLimit : 0
  selector:
    matchLabels:
      app: dodle-mongodb
  template:
    metadata:
      labels:
        app: dodle-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
          livenessProbe:
            exec:
              command: ["mongosh", "--eval", "db.adminCommand('ping')"]
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: dodle-mongodb-pvc
