kustomize/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dodle-backend
spec:
  selector:
    app: dodle-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
