kustomize/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dodle-frontend
spec:
  selector:
    app: dodle-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
