kustomize/base/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dodle-mongodb
spec:
  selector:
    app: dodle-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
