kustomize/base/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dodle-rabbitmq
  labels:
    app: dodle-rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
      protocol: TCP
    - name: management
      port: 15672
      targetPort: 15672
      protocol: TCP
  selector:
    app: dodle-rabbitmq
