kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dodle-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dodle.do-polytech.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  dodle-svc
                port:
                  number: 80
    - host: dodle-api.do-polytech.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  dodle-svc
                port:
                  number: 8080
